# Sudoku

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SudokuSFML.slnx  SudokuSFML.vcxproj  SudokuSFML.vcxproj.filters
.github/workflows/: ci.yml
doc/: designdocument.md
editor/: main.cpp
scenes/: GameScene.json
shared/: Data.h  Structs.h
src/: AssetManager.cpp  AssetManager.h  Board.cpp  Board.h  GameLoop.cpp  GameLoop.h  GameManager.cpp  GameManager.h  GameScene.cpp  GameScene.h  GridSystem.cpp  GridSystem.h  IInputListener.h  IScene.h  IUpdatable.h  InputSystem.cpp  InputSystem.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  SudokuBoards.h  main.cpp
